--- a/main.html
+++ b/main.html
@@ -11,6 +11,33 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<table>
+        <tr>
+            <th>Roll number</th>
+            <th>Name</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Ankit</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Tejas</td>
+        </tr>
+    </table>
+    <h1>List of medias</h1>
+
+    <ol>
+        <li><img src="https://picsum.photos/id/123/200/300" alt="image 1"></li>
+        <li><video controls>
+            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+        </video></li>
+        <li>
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            </audio>
+        </li>
+    </ol>
 </body>
 
 </html>
