--- a/main.html
+++ b/main.html
@@ -12,11 +12,14 @@
 </script>
 
 	<table>
-        <tr>
+		<thead>
+		<tr>
             <th>Roll number</th>
             <th>Name</th>
         </tr>
-        <tr>
+		</thead>
+        <tbody>
+		<tr>
             <td>1</td>
             <td>Ankit</td>
         </tr>
@@ -24,6 +27,8 @@
             <td>2</td>
             <td>Tejas</td>
         </tr>
+		</tbody>
+    
     </table>
     <h1>List of medias</h1>
 
